[package]
name = "airportAPI"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
serde_json = "1.0.133"
reqwest = { version = "0.12.9"}
tower_governor = {version = "0.4.3"}
tower = "0.5.1"
tracing = "0.1.41"
axum-core = "0.4.5"
cached = {version = "0.54.0", features = ["async", "wasm"]}
